@@ -1,35 +1,52 @@
 package com.Cinetime.service;
 
 import com.Cinetime.entity.Showtime;
+import com.Cinetime.payload.dto.response.ResponseMessage;
+import com.Cinetime.payload.dto.response.ShowtimeResponse;
+import com.Cinetime.payload.mappers.ShowtimeMapper;
 import com.Cinetime.repo.ShowtimeRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ShowtimeService {
 
     private final ShowtimeRepository showtimeRepository;
+    private final ShowtimeMapper showtimeMapper;
 
-    public ResponseEntity<List<Showtime>> getUpcomingShowtimes(Long movieId) {
-        List<Showtime> allShowtimes = showtimeRepository.findByMovieId(movieId);// Tum showtimeler gelsin
+    public ResponseMessage<List<ShowtimeResponse>> getUpcomingShowtimes(Long movieId) {
+        List<ShowtimeResponse> allShowtimes = showtimeRepository.findShowtimeDtosByMovieId(movieId);
 
-        LocalDateTime now = LocalDateTime.now(); // Su anin tarih/saati
 
         if (allShowtimes.isEmpty()) { //Eger bossa noContent dondur
-            return ResponseEntity.noContent().build();
+            return ResponseMessage.<List<ShowtimeResponse>>builder()
+                    .httpStatus(HttpStatus.OK) // Liste bos olsa bile HttpRequest 200 donduruyoruz
+                    .message("Showtimes not found for the given movie")
+                    .build();
         } else {
-            return ResponseEntity.ok(
-                    allShowtimes.stream().filter(showtime -> {
-                                LocalDateTime showTimeDateTime = LocalDateTime.of(showtime.getDate(), showtime.getStartTime());//Showtime'in sadece tarih ve saati gelsin
-                                return showTimeDateTime.isAfter(now); //Showtime'i su andan sonra olanlari return et
-                            })
-                            .collect(Collectors.toList()));//Liste haline getir
+
+            LocalDate today = LocalDate.now();
+            LocalTime now = LocalTime.now();
+
+            List<ShowtimeResponse> showtimes = allShowtimes.stream()
+                    .filter(showtime ->
+                            showtime.getDate().isAfter(today) ||
+                                    (showtime.getDate().isEqual(today) && showtime.getStartTime().isAfter(now))
+                    )
+                    .toList();
+            return ResponseMessage.<List<ShowtimeResponse>>builder()
+                    .httpStatus(HttpStatus.OK)
+                    .object(showtimes)
+                    .message("Showtimes found successfully")
+                    .build();
+
         }
     }
 
